--- a/src/index.html
+++ b/src/index.html
@@ -8,7 +8,7 @@
       name="viewport"
       content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no"
     />
-    <title>MeChat</title>
+    <title>小天Chat</title>
   </head>
   <body>
     <div id="app"></div>
